fix: fixed issue with z-index causing navbar to scroll under hero image overlay

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,7 @@
     top: 0;
     width: 100%;
     height: 5rem;
+    z-index: 4;
 }
 
 .logo {
